Bug 423267 - Image Files Not Showing In Messages Again
Summary: Image Files Not Showing In Messages Again
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.14.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 425393 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-06-20 12:57 UTC by Michael Corsa
Modified: 2020-08-15 18:51 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments
Comparasion Kontact and KMail (227.33 KB, image/png)
2020-07-15 21:27 UTC, Marcin Bajor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Corsa 2020-06-20 12:57:37 UTC
SUMMARY
Messages containing inline image files do not display the image even when html viewing set and allow external references set to allow.  This was a problem in earlier versions and was fixed.  Now the behavior is wrong again.

STEPS TO REPRODUCE
1. Attach an image to an email message
2. Send to account and open in kmail
3. Open message in kmail

OBSERVED RESULT
Image shows only as jpg icon and not the actual image

EXPECTED RESULT
Should show actual image file

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: openSUSE Leap 15.1
(available in About System)
KDE Plasma Version: 5.19.1
KDE Frameworks Version: 5.71.0
Qt Version: 5.15.0

ADDITIONAL INFORMATION
Comment 1 Marcin Bajor 2020-07-15 21:03:44 UTC
I can confirm the issue in:
Operating System: openSUSE Tumbleweed 20200714
KDE Plasma Version: 5.19.3
KDE Frameworks Version: 5.72.0
Qt Version: 5.15.0
Comment 2 Marcin Bajor 2020-07-15 21:27:50 UTC
Created attachment 130150 [details]
Comparasion Kontact and KMail

I observed that the issue occurs only in Kontact. There is no issue when I open the message in KMail. See the attached image.
Comment 3 Laurent Montel 2020-07-16 07:09:02 UTC
Git commit da34c1aba91645ec358a9d4e6dfac78b86f0c772 by Laurent Montel.
Committed on 16/07/2020 at 07:08.
Pushed by mlaurent into branch 'release/20.08'.

We need to initialize "cid" before to start apps
FIXED-IN: 5.15.0

M  +5    -0    src/mainwindow.cpp

https://invent.kde.org/pim/kontact/commit/da34c1aba91645ec358a9d4e6dfac78b86f0c772
Comment 4 Wolfgang Bauer 2020-08-15 18:51:10 UTC
*** Bug 425393 has been marked as a duplicate of this bug. ***