We need to initialize "cid" before to start apps

BUG: 423267
FIXED-IN: 5.15.0