src/mainwindow.cpp
@@ -33,6 +33,7 @@ using namespace Kontact;
 #ifdef WIN32
 #include <windows.h>
 #else
+#include <QWebEngineUrlScheme>
 #include <unistd.h>
 #endif
 #include <PimCommon/BroadcastStatus>
@@ -84,6 +85,10 @@ using namespace Kontact;
 MainWindow::MainWindow()
     : KontactInterface::Core()
 {
+    QWebEngineUrlScheme cidScheme("cid");
+    cidScheme.setFlags(QWebEngineUrlScheme::SecureScheme | QWebEngineUrlScheme::ContentSecurityPolicyIgnored);
+    cidScheme.setSyntax(QWebEngineUrlScheme::Syntax::Path);
+    QWebEngineUrlScheme::registerScheme(cidScheme);
     QDBusConnection::sessionBus().registerObject(
         QStringLiteral("/KontactInterface"), this, QDBusConnection::ExportScriptableSlots);
 
